# snark-verifier

./: .gitignore  Cargo.toml
.github/workflows/: ci.yaml  release.yaml
snark-verifier/: Cargo.toml
snark-verifier-sdk/: Cargo.toml
snark-verifier-sdk/benches/: read_pk.rs  standard_plonk.rs  zkevm.rs  zkevm_plus_state.rs
snark-verifier-sdk/examples/: StandardPlonkVerifier.sol  k_as_witness.rs  n_as_witness.rs  range_check.rs  standard_plonk.rs  vkey_as_witness.rs
snark-verifier-sdk/src/: evm.rs  halo2.rs  lib.rs
snark-verifier-sdk/src/halo2/: aggregation.rs  utils.rs
snark-verifier/configs/: example_evm_accumulator.json  example_recursion.json
snark-verifier/examples/: evm-verifier-with-accumulator.rs  evm-verifier.rs  recursion.rs
snark-verifier/src/: lib.rs  loader.rs  pcs.rs
snark-verifier/src/loader/: evm.rs  halo2.rs  native.rs
snark-verifier/src/loader/evm/: code.rs  loader.rs  util.rs
snark-verifier/src/loader/evm/test/: tui.rs
snark-verifier/src/loader/evm/util/: executor.rs
snark-verifier/src/loader/halo2/: loader.rs  shim.rs
snark-verifier/src/pcs/: ipa.rs  kzg.rs
snark-verifier/src/pcs/ipa/: accumulation.rs  decider.rs
snark-verifier/src/pcs/ipa/multiopen/: bgh19.rs
snark-verifier/src/pcs/kzg/: accumulation.rs  accumulator.rs  decider.rs
snark-verifier/src/pcs/kzg/multiopen/: bdfg21.rs  gwc19.rs
snark-verifier/src/system/: halo2.rs
snark-verifier/src/system/halo2/: strategy.rs  test.rs  transcript.rs
snark-verifier/src/system/halo2/test/kzg/: halo2.rs
snark-verifier/src/system/halo2/transcript/: evm.rs  halo2.rs
snark-verifier/src/util/: arithmetic.rs  hash.rs  msm.rs  poly.rs
snark-verifier/src/util/hash/: poseidon.rs
snark-verifier/src/util/hash/poseidon/: tests.rs
snark-verifier/src/verifier/: plonk.rs
snark-verifier/src/verifier/plonk/: proof.rs  protocol.rs
