[package]
name = "snark-verifier"
version = "0.1.1"
edition = "2021"

[dependencies]
itertools = "0.10.5"
lazy_static = "1.4.0"
num-bigint = "0.4.3"
num-integer = "0.1.45"
num-traits = "0.2.15"
hex = "0.4"
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }

# Use halo2-base as non-optional dependency because it re-exports halo2_proofs, halo2curves, and poseidon, using different repos based on feature flag "halo2-axiom" or "halo2-pse"
halo2-base = { git = "https://github.com/axiom-crypto/halo2-lib.git", tag = "v0.3.0", default-features = false }
# This is Scroll's audited poseidon circuit. We only use it for the Native Poseidon spec. We do not use the halo2 circuit at all (and it wouldn't even work because the halo2_proofs tag is not compatbile).
poseidon-circuit = { git = "https://github.com/scroll-tech/poseidon-circuit.git", rev = "50015b7" }

# parallel
rayon = { version = "1.7.0", optional = true }

# loader_evm
sha3 = { version = "=0.10.8", optional = true }
bytes = { version = "=1.4.0", default-features = false, optional = true }
primitive-types = { version = "=0.12.1", default-features = false, features = ["std"], optional = true }
rlp = { version = "=0.5.2", default-features = false, features = ["std"], optional = true }
revm = { version = "=2.3.1", optional = true }

# loader_halo2
halo2-ecc = { git = "https://github.com/axiom-crypto/halo2-lib.git", tag = "v0.3.0", default-features = false, optional = true }

[dev-dependencies]
ark-std = { version = "0.3.0", features = ["print-trace"] }
paste = "1.0.7"
rand_chacha = "0.3.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# loader_evm
crossterm = { version = "0.25" }
tui = { version = "0.19", default-features = false, features = ["crossterm"] }

[features]
default = ["loader_evm", "loader_halo2", "halo2-axiom", "display"]
display = ["halo2-base/display", "halo2-ecc?/display"]
loader_evm = ["dep:primitive-types", "dep:sha3", "dep:revm", "dep:bytes", "dep:rlp"]
loader_halo2 = ["halo2-ecc"]
parallel = ["dep:rayon"]
# EXACTLY one of halo2-pse / halo2-axiom should always be turned on; not sure how to enforce this with Cargo
halo2-pse = ["halo2-base/halo2-pse", "halo2-ecc?/halo2-pse"]
halo2-axiom = ["halo2-base/halo2-axiom", "halo2-ecc?/halo2-axiom"]

[[example]]
name = "evm-verifier"
required-features = ["loader_evm"]

[[example]]
name = "evm-verifier-with-accumulator"
required-features = ["loader_halo2", "loader_evm"]

[[example]]
name = "recursion"
required-features = ["loader_halo2"]
